# CandleMist

./: .env  Cargo.toml  README.md  tailwind.config.js
src/: api.rs  app.rs  lib.rs  main.rs
src/api/: loader.rs  textgen.rs
src/app/components/: chat_area.rs  type_area.rs
src/model/: conversation.rs
style/: main.scss
