[package]
name = "candlemist"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6.5", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
console_error_panic_hook = "0.1"
http = { version = "1.0.0", optional = true }
leptos = { version = "0.6.5", features = ["nightly"] }
leptos_meta = { version = "0.6.5", features = ["nightly"] }
leptos_actix = { version = "0.6.5", optional = true }
leptos_router = { version = "0.6.5", features = ["nightly"] }
wasm-bindgen = "=0.2.92"

serde = "1.0.199"
cfg-if = "1.0.0"
web-sys = "0.3.69"
gloo-net = "0.4.0"
actix-ws = { version = "0.2.5", optional = true }
actix-rt = { version = "2.9.0", optional = true }
futures = { version = "0.3.30", optional = true }
tokio = "1.37.0"

candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", optional = true }
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", optional = true }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", optional = true }
tokenizers = { version = "0.19.1", optional = true }

anyhow = "1.0.82"
dotenv = { version = "0.15.0", optional = true }
fastrand = { version = "2.1.0", optional = true }
env_logger = "0.11.3"

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
    "gloo-net/websocket",
    "dep:futures",
]
ssr = [
    "dep:actix-files",
    "dep:actix-web",
    "dep:leptos_actix",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:actix-ws",
    "dep:actix-rt",
    "dep:futures",
    "dep:candle-core",
    "dep:candle-examples",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:dotenv",
    "dep:fastrand",
    "tokio/sync",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "candlemist"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/output.css"
assets-dir = "assets"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
